tooling/nargo_cli/tests/snapshots/execution_success/fold_fibonacci/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "9579943917905940306": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "10419109383335261722": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _1",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_0, 32)] []",
    "CALL func 1: PREDICATE: EXPR [ 1 ]",
    "inputs: [_0], outputs: [_1]",
    "EXPR [ (1, _1) -55 ]",
    "func 1",
    "current witness index : _8",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : [_1]",
    "BLACKBOX::RANGE [(_0, 32)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _0) 4294967297 ], EXPR [ 4294967296 ]], outputs: [_2, _3]",
    "BLACKBOX::RANGE [(_2, 1)] []",
    "BLACKBOX::RANGE [(_3, 32)] []",
    "EXPR [ (-1, _0) (-4294967296, _2) (-1, _3) 4294967297 ]",
    "EXPR [ (-1, _0, _2) (1, _0) (1, _2) (-1, _4) -1 ]",
    "BLACKBOX::RANGE [(_4, 32)] []",
    "CALL func 1: PREDICATE: EXPR [ (-1, _2) 1 ]",
    "inputs: [_4], outputs: [_5]",
    "EXPR [ (-1, _0, _2) (1, _0) (2, _2) (-1, _6) -2 ]",
    "BLACKBOX::RANGE [(_6, 32)] []",
    "CALL func 1: PREDICATE: EXPR [ (-1, _2) 1 ]",
    "inputs: [_6], outputs: [_7]",
    "EXPR [ (-1, _2, _5) (-1, _2, _7) (1, _5) (1, _7) (-1, _8) 0 ]",
    "BLACKBOX::RANGE [(_8, 32)] []",
    "EXPR [ (-1, _0, _2) (1, _2, _8) (1, _1) (-1, _8) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main",
    "fibonacci"
  ],
  "brillig_names": [
    "directive_integer_quotient"
  ]
}
